k8s/recipe-management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-management
  namespace: cookbookapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-management
  template:
    metadata:
      labels:
        app: recipe-management
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: recipe-management
          image: walaska/cookbookapp:recipe-management
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
