k8s/recipe-management/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-management
  namespace: cookbookapp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - recipe-management.localhost
      secretName: cloudflare-tls
  rules:
    - host: recipe-management.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-management
                port:
                  number: 5001
